k8s_manifests/bran_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bran-deployment
  labels:
    app: bran
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bran
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: bran
    spec:
      containers:
      - name: bran
        image: $IMAGE_URI
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
