k8s_manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-bran
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app: bran
