k8s_manifests/bran_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bran-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: fampay.com
    http:
      paths:
      - path: /bran/*
        pathType: Prefix
        backend:
          service:
            name: service-bran
            port:
              number: 8000
