k8s_manifests/network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bran-to-hodr
spec:
  podSelector:
    matchLabels:
      app: bran
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: hodr
